--- a/BeatSaberTools/Shared/SideNav.razor
+++ b/BeatSaberTools/Shared/SideNav.razor
@@ -6,10 +6,10 @@
         Maps
     </MudNavLink>
     <MudNavLink
-        Icon="@Icons.Filled.LibraryMusic"
+        Icon="@Icons.Filled.KeyboardDoubleArrowUp"
         DisableRipple="true"
-        OnClick="@(() => OnMapsNavigation("/ranked"))">
-        Ranked
+        OnClick="@(() => OnMapsNavigation("/improve"))">
+        Improve
     </MudNavLink>
     <PlaylistList></PlaylistList>
 </MudDrawer>
