Changed structure of components

--- a/BeatSaberTools/_Imports.razor
+++ b/BeatSaberTools/_Imports.razor
@@ -6,7 +6,9 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using BeatSaberTools
-@using BeatSaberTools.Shared
+@using BeatSaberTools.Components
+@using BeatSaberTools.Components.Maps
+@using BeatSaberTools.Components.Playlists
 @using BeatSaberTools.Models
 @using BeatSaberTools.Models.Data
 @using BeatSaberTools.Services
