Improvement tweaker start

--- a/BeatSaberTools/Components/Maps/MapBrowser.razor
+++ b/BeatSaberTools/Components/Maps/MapBrowser.razor
@@ -4,7 +4,7 @@
 
 <MudTable Items="Maps"
           Height="calc(100% - 116px)"
-          Class="full-height background-transparent"
+          Class="full-height full-width background-transparent"
           Loading="LoadingMapInfo"
           Filter="Filter"
           FixedHeader="true"
