--- a/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
+++ b/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
@@ -1,3 +1,11 @@
-﻿<MudDrawer Open="true" Fixed="false" Style="position: relative !important; background-color: var(--mud-palette-surface);">
-
+﻿<MudDrawer
+    Open="true"
+    Fixed="false"
+    Class="pa-4"
+    Style="position: relative !important; background-color: var(--mud-palette-surface);">
+    <MudSelect T="string" Value="PlayedFilter" Label="Played / Not played" Variant="Variant.Outlined" ValueChanged="value => OnPlayedFilterChanged(value)">
+        <MudSelectItem Value="@("Both")" />
+        <MudSelectItem Value="@("Not played")" />
+        <MudSelectItem Value="@("Played")" />
+    </MudSelect>
 </MudDrawer>
