Played filter fixes + styling

--- a/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
+++ b/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
@@ -1,6 +1,7 @@
 ﻿<MudDrawer
     Open="true"
     Fixed="false"
+    Elevation="0"
     Class="pa-4"
     Style="position: relative !important; background-color: var(--mud-palette-surface);">
     <MudSelect T="string" Value="PlayedFilter" Label="Played / Not played" Variant="Variant.Outlined" ValueChanged="value => OnPlayedFilterChanged(value)">
