--- a/BeatSaberTools/Components/Maps/MapBrowser.razor
+++ b/BeatSaberTools/Components/Maps/MapBrowser.razor
@@ -14,7 +14,7 @@
         {
             <MudChip Variant="Variant.Outlined">@SelectedPlaylist.Title</MudChip>
         }
-        @foreach (var mapFilter in MapFilters)
+        @foreach (var mapFilter in MapFilters.Where(f => f.Visible))
         {
             <MudChip Variant="Variant.Outlined" OnClose="() => RemoveMapFilter(mapFilter)">@mapFilter.Name</MudChip>
         }
