--- a/BeatSaberTools/Components/Maps/MapBrowserRow.razor
+++ b/BeatSaberTools/Components/Maps/MapBrowserRow.razor
@@ -29,13 +29,13 @@
 <MudTd>
     @if (Map.PlayerScore != null)
     {
-        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.PlayerScore.AccuracyWithMods().ToString("#0.##")%</MudChip>
+        <MudChip Color="Color.Primary" Size="Size.Small">@Map.PlayerScore.AccuracyWithMods().ToString("#0.##")%</MudChip>
     }
 </MudTd>
 <MudTd Style="width: 130px">
     @if (Map.PlayerScore?.Score?.Pp != null)
     {
-        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.PlayerScore.Score.Pp.ToString("#0.##") pp</MudChip>
+        <MudChip Color="Color.Primary" Size="Size.Small">@Map.PlayerScore.Score.Pp.ToString("#0.##") pp</MudChip>
     }
 </MudTd>
 <MudTd Style="width: 130px">
@@ -43,7 +43,7 @@
     {
         @foreach (var scoreEstimate in Map.ScoreEstimate)
         {
-            <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">
+            <MudChip Color="Color.Primary" Size="Size.Small">
                 @scoreEstimate.Difficulty | 
                 @scoreEstimate.Stars <MudIcon Icon="@Icons.Filled.Star" Size="Size.Small"></MudIcon> |
                 @scoreEstimate.Accuracy.ToString("#0.##") % |
