--- a/BeatSaberTools/Components/Maps/RankedMapBrowserRow.razor
+++ b/BeatSaberTools/Components/Maps/RankedMapBrowserRow.razor
@@ -16,8 +16,8 @@
 <MudTd>
     @if (Map.PlayerScore != null)
     {
-        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.PlayerScore.Accuracy().ToString("#0.##") %</MudChip>
-        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.PlayerScore.Score.Pp.ToString("#0.##") pp</MudChip>
+        <MudChip Color="Color.Primary" Size="Size.Small">@Map.PlayerScore.Accuracy().ToString("#0.##") %</MudChip>
+        <MudChip Color="Color.Primary" Size="Size.Small">@Map.PlayerScore.Score.Pp.ToString("#0.##") pp</MudChip>
     }
 </MudTd>
 <MudTd Style="width: 130px">
@@ -25,7 +25,7 @@
     {
         @foreach (var scoreEstimate in Map.ScoreEstimate)
         {
-            <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">
+            <MudChip Color="Color.Primary" Size="Size.Small">
                 @scoreEstimate.Difficulty |
                 @scoreEstimate.Stars <MudIcon Icon="@Icons.Filled.Star" Size="Size.Small"></MudIcon> |
                 @scoreEstimate.Accuracy.ToString("#0.##") % |
