--- a/BeatSaberTools/Components/Playlists/PlaylistList.razor
+++ b/BeatSaberTools/Components/Playlists/PlaylistList.razor
@@ -1,6 +1,6 @@
 ﻿@using BeatSaberTools.Models.Data.Playlists
 
-<MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue">
+<MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue" Color="Color.Primary">
     <MudListSubheader Class="d-flex align-center justify-space-between py-2" Style="border-top: 1px solid;">
         <div class="d-flex align-center">
             <MudIcon Icon="@Icons.Filled.PlaylistPlay"></MudIcon> Playlists
@@ -13,11 +13,15 @@
     }
     @foreach (var playlist in Playlists)
     {
-        <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist" Class="py-0 px-1">
+        <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1">
             <div class="playlist-list-item">
                 @if (!string.IsNullOrEmpty(playlist.CoverImage))
                 {
                     <img src="data:image/png;@playlist.CoverImage" class="ml-3 mr-3" />
+                }
+                else
+                {
+                    <MudIcon Icon="@Icons.Filled.PlaylistPlay" Class="ml-3 mr-3" Style="width: 30px; height: 30px"></MudIcon>
                 }
                 <span>@playlist.Title</span>
                 <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
@@ -29,7 +33,7 @@
     }
 </MudList>
 
-<MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue">
+<MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue" Color="Color.Primary">
     <MudListSubheader Class="d-flex align-center justify-space-between py-2" Style="border-top: 1px solid;">
         <div class="d-flex align-center">
             <MudIcon Icon="@Icons.Filled.PlaylistPlay"></MudIcon> Dynamic Playlists
@@ -42,11 +46,15 @@
     }
     @foreach (var playlist in DynamicPlaylists)
     {
-        <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist" Class="py-0 px-1">
+        <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist.FileName" Class="py-0 px-1">
             <div class="playlist-list-item">
                 @if (!string.IsNullOrEmpty(playlist.CoverImage))
                 {
                     <img src="data:image/png;@playlist.CoverImage" class="ml-3 mr-3" />
+                }
+                else
+                {
+                    <MudIcon Icon="@Icons.Filled.PlaylistPlay" Class="ml-3 mr-3" Style="width: 30px; height: 30px"></MudIcon>
                 }
                 <span>@playlist.Title</span>
                 <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
