--- a/BeatSaberTools/Components/Playlists/PlaylistSelector.razor
+++ b/BeatSaberTools/Components/Playlists/PlaylistSelector.razor
@@ -1,13 +1,17 @@
-﻿<MudDialog>
+﻿<MudDialog Class="playlist-selector-dialog">
     <DialogContent>
         <MudList Class="d-flex flex-column" Clickable="true">
             @foreach (var playlist in Playlists)
             {
-                <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist" Class="py-0 px-1">
+                <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist" Class="py-1 px-2">
                     <div class="playlist-list-item">
                         @if (!string.IsNullOrEmpty(playlist.CoverImage))
                         {
                             <img src="data:image/png;@playlist.CoverImage" class="ml-3 mr-3" />
+                        }
+                        else
+                        {
+                            <MudIcon Icon="@Icons.Filled.PlaylistPlay" Class="ml-3 mr-3" Style="width: 30px; height: 30px"></MudIcon>
                         }
                         <span>@playlist.Title</span>
                     </div>
