--- a/BeatSaberTools/Pages/RankedMaps.razor
+++ b/BeatSaberTools/Pages/RankedMaps.razor
@@ -4,7 +4,7 @@
 
 <div class="d-flex full-height">
     <ImprovementTweaker></ImprovementTweaker>
-    <MapBrowser Maps="MapList">
+    <MapBrowser Maps="MapList" Selectable="true">
         <HeaderContent>
             <RankedMapBrowserHeader></RankedMapBrowserHeader>
         </HeaderContent>
