--- a/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
+++ b/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
@@ -1,12 +1,29 @@
-﻿<MudDrawer
+﻿@inherits ReactiveComponent
+
+<MudDrawer
     Open="true"
     Fixed="false"
     Elevation="0"
     Class="pa-4"
     Style="position: relative !important; background-color: var(--mud-palette-surface);">
-    <MudSelect T="string" Value="PlayedFilter" Label="Played / Not played" Variant="Variant.Outlined" ValueChanged="value => OnPlayedFilterChanged(value)">
-        <MudSelectItem Value="@("Both")" />
-        <MudSelectItem Value="@("Not played")" />
-        <MudSelectItem Value="@("Played")" />
-    </MudSelect>
+    <div class="d-flex flex-column justify-space-between full-height">
+        <div>
+            <MudSelect T="string" Value="PlayedFilter" Label="Played / Not played" Variant="Variant.Outlined" ValueChanged="value => OnPlayedFilterChanged(value)">
+                <MudSelectItem Value="@("Both")" />
+                <MudSelectItem Value="@("Not played")" />
+                <MudSelectItem Value="@("Played")" />
+            </MudSelect>
+        </div>
+        <div>
+            <MudButton
+                Color="Color.Primary"
+                Variant="Variant.Filled"
+                Class="full-width"
+                Disabled="!SelectedMaps.Any()"
+                OnClick="CreatePlaylistFromSelectedMaps">
+                Create playlist
+            </MudButton>
+        </div>
+    </div>
+    
 </MudDrawer>
