--- a/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
+++ b/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
@@ -19,7 +19,7 @@
                 Color="Color.Primary"
                 Variant="Variant.Filled"
                 Class="full-width"
-                Disabled="!SelectedMaps.Any()"
+                Disabled="!SelectedMaps.Any() || CreatingPlaylist"
                 OnClick="CreatePlaylistFromSelectedMaps">
                 Create playlist
             </MudButton>
