Fixed download icon not disappearing + fixed creating playlist + deselecting everything after download

--- a/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
+++ b/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
@@ -18,6 +18,7 @@
             <MudButton
                 Color="Color.Primary"
                 Variant="Variant.Filled"
+                StartIcon="@Icons.Filled.PlaylistAdd"
                 Class="full-width"
                 Disabled="!SelectedMaps.Any() || CreatingPlaylist"
                 OnClick="CreatePlaylistFromSelectedMaps">
@@ -25,5 +26,4 @@
             </MudButton>
         </div>
     </div>
-    
 </MudDrawer>
