--- a/BeatSaberTools/Components/Maps/RankedMapBrowserHeader.razor
+++ b/BeatSaberTools/Components/Maps/RankedMapBrowserHeader.razor
@@ -1,6 +1,7 @@
 ﻿@using BeatSaberTools.Core.Utilities.Scoresaber
 
 <MudTh></MudTh>
+<MudTh></MudTh>
 <MudTh>
     <MudTableSortLabel SortBy="new Func<Map, object>(x => x.Name)">Name</MudTableSortLabel>
 </MudTh>
