--- a/BeatSaberTools/Pages/Maps.razor
+++ b/BeatSaberTools/Pages/Maps.razor
@@ -7,7 +7,7 @@
         <MapBrowserHeader></MapBrowserHeader>
     </HeaderContent>
     <RowContent>
-        <MapBrowserRow Map="context"></MapBrowserRow>
+        <MapBrowserRow Map="context.Map"></MapBrowserRow>
     </RowContent>
 </MapBrowser>
 
