--- a/BeatSaberTools/Components/Maps/RankedMapBrowserRow.razor
+++ b/BeatSaberTools/Components/Maps/RankedMapBrowserRow.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Text.Json
 @using BeatSaberTools.Core.Utilities.Scoresaber
 
+<MudTd DataLabel="Name">@RowNumber</MudTd>
 <MudTd Class="pa-1" Style="width: 50px">
     @if (!string.IsNullOrEmpty(CoverImageUrl))
     {
