Ranked maps can be hidden

--- a/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
+++ b/BeatSaberTools/Components/Maps/ImprovementTweaker.razor
@@ -9,8 +9,13 @@
         <div>
             <MudSelect T="string" Value="PlayedFilter" Label="Played / Not played" Variant="Variant.Outlined" ValueChanged="value => OnPlayedFilterChanged(value)">
                 <MudSelectItem Value="@("Both")" />
-                <MudSelectItem Value="@("Not played")" />
                 <MudSelectItem Value="@("Played")" />
+                <MudSelectItem Value="@("Not played")" />
+            </MudSelect>
+            <MudSelect T="string" Value="HiddenFilter" Label="Hidden / Not hidden" Class="mt-5" Variant="Variant.Outlined" ValueChanged="value => OnHiddenFilterChanged(value)">
+                <MudSelectItem Value="@("Both")" />
+                <MudSelectItem Value="@("Hidden")" />
+                <MudSelectItem Value="@("Not hidden")" />
             </MudSelect>
             <MudExpansionPanels Class="mt-3">
                 <MudExpansionPanel Text="Select..." Style="background-color: var(--mud-palette-drawer-background);">
