--- a/BeatSaberTools/Components/Maps/RankedMapBrowserRow.razor
+++ b/BeatSaberTools/Components/Maps/RankedMapBrowserRow.razor
@@ -51,3 +51,8 @@
         <MudIconButton Icon="@Icons.Filled.Download" OnClick="DownloadMap"></MudIconButton>
     }
 </MudTd>
+<MudTd>
+    <MudTooltip Text="Hide map">
+        <MudIconButton Icon="@Icons.Filled.HideSource" OnClick="HideUnhideMap"></MudIconButton>
+    </MudTooltip>
+</MudTd>
