--- a/BeatSaberTools/Components/MainLayout.razor
+++ b/BeatSaberTools/Components/MainLayout.razor
@@ -24,6 +24,9 @@
     protected BeatSaberDataService BeatSaberDataService { get; set; }
 
     [Inject]
+    protected MapService MapService { get; set; }
+
+    [Inject]
     protected ScoreSaberService ScoreSaberService { get; set; }
 
     [Inject]
@@ -45,6 +48,7 @@
                 Task.Run(ScoreSaberService.LoadPlayerData);
                 Task.Run(ScoreSaberService.LoadRankedMaps);
                 Task.Run(BeatSaberDataService.LoadAllPlaylists);
+                Task.Run(MapService.LoadHiddenMapConfig);
             }
         });
     }
