--- a/BeatSaberTools/Components/Maps/MapBrowserHeader.razor
+++ b/BeatSaberTools/Components/Maps/MapBrowserHeader.razor
@@ -21,7 +21,7 @@
     <MudTableSortLabel SortBy="new Func<Map, object>(x => x.PlayerScore?.Score?.Pp)">pp</MudTableSortLabel>
 </MudTh>
 <MudTh>
-    <MudTableSortLabel SortBy="new Func<Map, object>(x => x.ScoreEstimate.Any() ? x.ScoreEstimate.Max(x => x.PPIncrease) : 0)">
+    <MudTableSortLabel SortBy="new Func<Map, object>(x => x.ScoreEstimates.Any() ? x.ScoreEstimates.Max(x => x.PPIncrease) : 0)">
         <MudIcon Icon="@Icons.Filled.KeyboardDoubleArrowUp"></MudIcon>pp
     </MudTableSortLabel>
 </MudTh>
