--- a/BeatSaberTools/Components/Maps/RankedMapBrowserHeader.razor
+++ b/BeatSaberTools/Components/Maps/RankedMapBrowserHeader.razor
@@ -15,16 +15,16 @@
     <MudTableSortLabel SortBy="new Func<Map, object>(x => x.SongDuration)">Duration</MudTableSortLabel>
 </MudTh>
 <MudTh>
-    <MudTableSortLabel SortBy="new Func<Map, object>(x => x.ScoreEstimate?.FirstOrDefault()?.Difficulty)">Difficulty</MudTableSortLabel>
+    <MudTableSortLabel SortBy="new Func<Map, object>(x => x.ScoreEstimates?.FirstOrDefault()?.Difficulty)">Difficulty</MudTableSortLabel>
 </MudTh>
 <MudTh>
-    <MudTableSortLabel SortBy="new Func<Map, object>(x => x.ScoreEstimate?.FirstOrDefault()?.Stars)">
+    <MudTableSortLabel SortBy="new Func<Map, object>(x => x.ScoreEstimates?.FirstOrDefault()?.Stars)">
         <MudIcon Icon="@Icons.Filled.Star" Size="Size.Small"></MudIcon>
     </MudTableSortLabel>
 </MudTh>
 <MudTh></MudTh>
 <MudTh>
-    <MudTableSortLabel InitialDirection="SortDirection.Descending" SortBy="new Func<Map, object>(x => x.ScoreEstimate.Any() ? x.ScoreEstimate.Max(x => x.PPIncrease) : 0)">
+    <MudTableSortLabel InitialDirection="SortDirection.Descending" SortBy="new Func<Map, object>(x => x.ScoreEstimates.Any() ? x.ScoreEstimates.Max(x => x.PPIncrease) : 0)">
         <MudIcon Icon="@Icons.Filled.KeyboardDoubleArrowUp"></MudIcon>pp
     </MudTableSortLabel>
 </MudTh>
