Saving and loading hidden maps from db

--- a/BeatSaberTools/Components/MainLayout.razor
+++ b/BeatSaberTools/Components/MainLayout.razor
@@ -48,7 +48,7 @@
                 Task.Run(ScoreSaberService.LoadPlayerData);
                 Task.Run(ScoreSaberService.LoadRankedMaps);
                 Task.Run(BeatSaberDataService.LoadAllPlaylists);
-                Task.Run(MapService.LoadHiddenMapConfig);
+                Task.Run(MapService.LoadHiddenMaps);
             }
         });
     }
