Single BeatSaberFileServer + removed unused properties

--- a/BeatSaberTools/Components/MainLayout.razor
+++ b/BeatSaberTools/Components/MainLayout.razor
@@ -30,7 +30,7 @@
     protected ScoreSaberService ScoreSaberService { get; set; }
 
     [Inject]
-    protected BeatSaberToolFileService BeatSaberToolFileService { get; set; }
+    protected BeatSaverFileService BeatSaberToolFileService { get; set; }
 
     protected bool InitialSetupDone { get; set; }
 
