Possible to open settings from sidebar to switch install location folder

--- a/BeatSaberTools/Components/InitialSetup.razor
+++ b/BeatSaberTools/Components/InitialSetup.razor
@@ -1,4 +1,6 @@
-﻿<MudDialog Style="width: 600px">
+﻿@inherits ReactiveComponent
+
+<MudDialog Style="width: 600px">
     <TitleContent></TitleContent>
     <DialogContent>
         <MudTextField
