--- a/MapMaven/Components/MainLayout.razor
+++ b/MapMaven/Components/MainLayout.razor
@@ -5,7 +5,7 @@
 
 @inject IDialogService DialogService
 
-<MudThemeProvider Theme="BSToolsTheme.Theme" />
+<MudThemeProvider Theme="MapMavenTheme.Theme" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
