--- a/MapMaven/Components/MainLayout.razor
+++ b/MapMaven/Components/MainLayout.razor
@@ -33,7 +33,7 @@
     protected ScoreSaberService ScoreSaberService { get; set; }
 
     [Inject]
-    protected BeatSaverFileService BeatSaberToolFileService { get; set; }
+    protected BeatSaberFileService BeatSaberToolFileService { get; set; }
 
     protected bool InitialSetupDone { get; set; }
 
